services/getter/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harporis-getter
  labels:
    app: harporis-getter
spec:
  clusterIP: None
  selector:
    app: harporis-getter
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
    - name: grpc
      port: 50051
      targetPort: grpc
